hphp/hack/test/typecheck/coeffects/local/globals_static_property.php.exp
File "globals_static_property.php", line 6, characters 32-61:
Direct references to coeffects namespaces are not allowed (Parsing[1002])
File "globals_static_property.php", line 10, characters 12-21:
Reading static properties requires the capability ReadGlobals, which is not provided by the context (Parsing[1002])
File "globals_static_property.php", line 14, characters 22-51:
Direct references to coeffects namespaces are not allowed (Parsing[1002])
File "globals_static_property.php", line 15, characters 28-32:
Reading static properties requires the capability ReadGlobals, which is not provided by the context (Parsing[1002])
File "globals_static_property.php", line 20, characters 19-48:
Direct references to coeffects namespaces are not allowed (Parsing[1002])
File "globals_static_property.php", line 21, characters 10-14:
Reading static properties requires the capability ReadGlobals, which is not provided by the context (Parsing[1002])
File "globals_static_property.php", line 10, characters 20-21:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "globals_static_property.php", line 9, characters 30-31:
  The local (enclosing) context provides the capability set {}
File "globals_static_property.php", line 15, characters 31-32:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "globals_static_property.php", line 15, characters 21-22:
  The local (enclosing) context provides the capability set {}
File "globals_static_property.php", line 21, characters 13-14:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "globals_static_property.php", line 19, characters 21-31:
  The local (enclosing) context provides the capability WriteProperty
